objects/LocalFlosum__FL_Sync_Component__c.object
<CustomObject>
    <fields>
        <fullName>LocalFlosum__CRC32__c</fullName>
        <label>CRC32</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Changed_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Changed_On__c</fullName>
        <label>Changed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Component_Type__c</fullName>
        <label>Component Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalFlosum__Sync__c</fullName>
        <label>Sync</label>
        <referenceTo>LocalFlosum__FL_Sync__c</referenceTo>
        <relationshipLabel>Sync Components</relationshipLabel>
        <relationshipName>Sync_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sync Component</label>
    <nameField>
        <displayFormat>SC-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Sync Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>